// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cdk-graph/filtering filter cfnType excludeCfnType should not have excluded types 1`] = `
{
  "AWS::ApiGateway::Account": 1,
  "AWS::ApiGateway::Deployment": 1,
  "AWS::ApiGateway::Method": 3,
  "AWS::ApiGateway::Resource": 2,
  "AWS::ApiGateway::RestApi": 1,
  "AWS::ApiGateway::Stage": 1,
  "AWS::CloudFront::Distribution": 1,
  "AWS::EC2::EIP": 1,
  "AWS::EC2::Instance": 2,
  "AWS::EC2::InternetGateway": 1,
  "AWS::EC2::NatGateway": 1,
  "AWS::EC2::Route": 6,
  "AWS::EC2::RouteTable": 6,
  "AWS::EC2::SecurityGroup": 3,
  "AWS::EC2::Subnet": 6,
  "AWS::EC2::SubnetRouteTableAssociation": 6,
  "AWS::EC2::VPC": 1,
  "AWS::EC2::VPCGatewayAttachment": 1,
  "AWS::IAM::InstanceProfile": 2,
  "AWS::IAM::Policy": 1,
  "AWS::IAM::Role": 0,
  "AWS::Lambda::Alias": 0,
  "AWS::Lambda::Function": 0,
  "AWS::Lambda::Permission": 4,
  "AWS::Lambda::Version": 0,
  "AWS::RDS::DBInstance": 1,
  "AWS::RDS::DBSubnetGroup": 1,
  "AWS::S3::Bucket": 3,
  "AWS::SecretsManager::Secret": 1,
  "AWS::SecretsManager::SecretTargetAttachment": 1,
}
`;

exports[`cdk-graph/filtering filter cfnType excludeCfnType should not have filter types nodes 1`] = `
{
  "AWS::ApiGateway::Account": 1,
  "AWS::ApiGateway::Deployment": 1,
  "AWS::ApiGateway::Method": 3,
  "AWS::ApiGateway::Resource": 2,
  "AWS::ApiGateway::RestApi": 1,
  "AWS::ApiGateway::Stage": 1,
  "AWS::CloudFront::Distribution": 1,
  "AWS::EC2::EIP": 1,
  "AWS::EC2::Instance": 2,
  "AWS::EC2::InternetGateway": 1,
  "AWS::EC2::NatGateway": 1,
  "AWS::EC2::Route": 6,
  "AWS::EC2::RouteTable": 6,
  "AWS::EC2::SecurityGroup": 3,
  "AWS::EC2::Subnet": 6,
  "AWS::EC2::SubnetRouteTableAssociation": 6,
  "AWS::EC2::VPC": 1,
  "AWS::EC2::VPCGatewayAttachment": 1,
  "AWS::IAM::InstanceProfile": 2,
  "AWS::IAM::Policy": 1,
  "AWS::IAM::Role": 0,
  "AWS::Lambda::Alias": 0,
  "AWS::Lambda::Function": 0,
  "AWS::Lambda::Permission": 4,
  "AWS::Lambda::Version": 0,
  "AWS::RDS::DBInstance": 1,
  "AWS::RDS::DBSubnetGroup": 1,
  "AWS::S3::Bucket": 3,
  "AWS::SecretsManager::Secret": 1,
  "AWS::SecretsManager::SecretTargetAttachment": 1,
}
`;

exports[`cdk-graph/filtering filter cfnType includeCfnType should only have included types 1`] = `
{
  "AWS::ApiGateway::Account": 0,
  "AWS::ApiGateway::Deployment": 0,
  "AWS::ApiGateway::Method": 0,
  "AWS::ApiGateway::Resource": 0,
  "AWS::ApiGateway::RestApi": 0,
  "AWS::ApiGateway::Stage": 0,
  "AWS::CloudFront::Distribution": 0,
  "AWS::EC2::EIP": 0,
  "AWS::EC2::Instance": 0,
  "AWS::EC2::InternetGateway": 0,
  "AWS::EC2::NatGateway": 0,
  "AWS::EC2::Route": 0,
  "AWS::EC2::RouteTable": 0,
  "AWS::EC2::SecurityGroup": 0,
  "AWS::EC2::Subnet": 0,
  "AWS::EC2::SubnetRouteTableAssociation": 0,
  "AWS::EC2::VPC": 0,
  "AWS::EC2::VPCGatewayAttachment": 0,
  "AWS::IAM::InstanceProfile": 0,
  "AWS::IAM::Policy": 0,
  "AWS::IAM::Role": 11,
  "AWS::Lambda::Alias": 0,
  "AWS::Lambda::Function": 8,
  "AWS::Lambda::Permission": 0,
  "AWS::Lambda::Version": 0,
  "AWS::RDS::DBInstance": 0,
  "AWS::RDS::DBSubnetGroup": 0,
  "AWS::S3::Bucket": 0,
  "AWS::SecretsManager::Secret": 0,
  "AWS::SecretsManager::SecretTargetAttachment": 0,
}
`;

exports[`cdk-graph/filtering filter custom should only have filter type edge 1`] = `
{
  "DEPENDENCY": 0,
  "REFERENCE": 21,
}
`;

exports[`cdk-graph/filtering filter custom should only have filter types nodes 1`] = `
{
  "AWS::ApiGateway::Account": 0,
  "AWS::ApiGateway::Deployment": 0,
  "AWS::ApiGateway::Method": 0,
  "AWS::ApiGateway::Resource": 0,
  "AWS::ApiGateway::RestApi": 0,
  "AWS::ApiGateway::Stage": 0,
  "AWS::CloudFront::Distribution": 0,
  "AWS::EC2::EIP": 0,
  "AWS::EC2::Instance": 0,
  "AWS::EC2::InternetGateway": 0,
  "AWS::EC2::NatGateway": 0,
  "AWS::EC2::Route": 0,
  "AWS::EC2::RouteTable": 0,
  "AWS::EC2::SecurityGroup": 0,
  "AWS::EC2::Subnet": 0,
  "AWS::EC2::SubnetRouteTableAssociation": 0,
  "AWS::EC2::VPC": 0,
  "AWS::EC2::VPCGatewayAttachment": 0,
  "AWS::IAM::InstanceProfile": 0,
  "AWS::IAM::Policy": 0,
  "AWS::IAM::Role": 11,
  "AWS::Lambda::Alias": 0,
  "AWS::Lambda::Function": 8,
  "AWS::Lambda::Permission": 0,
  "AWS::Lambda::Version": 0,
  "AWS::RDS::DBInstance": 0,
  "AWS::RDS::DBSubnetGroup": 0,
  "AWS::S3::Bucket": 0,
  "AWS::SecretsManager::Secret": 0,
  "AWS::SecretsManager::SecretTargetAttachment": 0,
}
`;

exports[`cdk-graph/filtering filter nodeType excludeNodeType should not have excluded nodes 1`] = `
{
  "AWS::ApiGateway::Account": 1,
  "AWS::ApiGateway::Deployment": 1,
  "AWS::ApiGateway::Method": 3,
  "AWS::ApiGateway::Resource": 2,
  "AWS::ApiGateway::RestApi": 1,
  "AWS::ApiGateway::Stage": 1,
  "AWS::CloudFront::Distribution": 1,
  "AWS::EC2::EIP": 1,
  "AWS::EC2::Instance": 2,
  "AWS::EC2::InternetGateway": 1,
  "AWS::EC2::NatGateway": 1,
  "AWS::EC2::Route": 6,
  "AWS::EC2::RouteTable": 6,
  "AWS::EC2::SecurityGroup": 3,
  "AWS::EC2::Subnet": 6,
  "AWS::EC2::SubnetRouteTableAssociation": 6,
  "AWS::EC2::VPC": 1,
  "AWS::EC2::VPCGatewayAttachment": 1,
  "AWS::IAM::InstanceProfile": 2,
  "AWS::IAM::Policy": 4,
  "AWS::IAM::Role": 13,
  "AWS::Lambda::Alias": 1,
  "AWS::Lambda::Function": 8,
  "AWS::Lambda::Permission": 4,
  "AWS::Lambda::Version": 1,
  "AWS::RDS::DBInstance": 1,
  "AWS::RDS::DBSubnetGroup": 1,
  "AWS::S3::Bucket": 5,
  "AWS::SecretsManager::Secret": 1,
  "AWS::SecretsManager::SecretTargetAttachment": 1,
}
`;

exports[`cdk-graph/filtering filter nodeType include should only have included nodes 1`] = `
{
  "AWS::ApiGateway::Account": 1,
  "AWS::ApiGateway::Deployment": 1,
  "AWS::ApiGateway::Method": 3,
  "AWS::ApiGateway::Resource": 2,
  "AWS::ApiGateway::RestApi": 1,
  "AWS::ApiGateway::Stage": 1,
  "AWS::CloudFront::Distribution": 1,
  "AWS::EC2::EIP": 1,
  "AWS::EC2::Instance": 2,
  "AWS::EC2::InternetGateway": 1,
  "AWS::EC2::NatGateway": 1,
  "AWS::EC2::Route": 6,
  "AWS::EC2::RouteTable": 6,
  "AWS::EC2::SecurityGroup": 3,
  "AWS::EC2::Subnet": 6,
  "AWS::EC2::SubnetRouteTableAssociation": 6,
  "AWS::EC2::VPC": 1,
  "AWS::EC2::VPCGatewayAttachment": 1,
  "AWS::IAM::InstanceProfile": 2,
  "AWS::IAM::Policy": 4,
  "AWS::IAM::Role": 13,
  "AWS::Lambda::Alias": 1,
  "AWS::Lambda::Function": 8,
  "AWS::Lambda::Permission": 4,
  "AWS::Lambda::Version": 1,
  "AWS::RDS::DBInstance": 1,
  "AWS::RDS::DBSubnetGroup": 1,
  "AWS::S3::Bucket": 5,
  "AWS::SecretsManager::Secret": 1,
  "AWS::SecretsManager::SecretTargetAttachment": 1,
}
`;
